--- a/pages/p5/955121.md
+++ b/pages/p5/955121.md
@@ -1,4 +1,4 @@
-### 中国央行出手干预人民币升值的深层原因(图)
+### 北京当局要精准拆弹 蚂蚁集团翻盘无望(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="中国央行 人民币 外汇" src="https://img3.secretchina.com/pic/2020/6-2/p2702641a12984425-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="蚂蚁集团 郭树清 马化腾 金融" src="https://img3.secretchina.com/pic/2020/2-11/p2624771a958444318-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   中国央行出手干预人民币升值的深层原因。（图片来源：Comugnero Silvana/Adobe Stock）
+   郭树清表示对金融和科技领域跨界混业经营精准拆弹。（图片来源：Funtap/Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,66 +21,86 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月13日讯】10月10日，
+  【看中国2020年12月8日讯】（看中国记者文龙综合报导）12月8日，中国银保监会主席
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/中国央行" target="_blank">
-    中国央行
+   郭树清
+  </strong>
+  发表演讲，表示对
+  <strong>
+   金融
+  </strong>
+  和科技领域跨界混业经营精准拆弹。而被暂停上市的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/蚂蚁集团" target="_blank">
+    蚂蚁集团
    </span>
   </strong>
-  意外发布消息将远期售汇业务
+  同时具备了金融和科技特征，腾讯集团创始人
   <strong>
-   外汇
+   马化腾
   </strong>
-  风险准备金率下调为0（零）。
+  也感悟大洗牌开启。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   01历史政策动机及影响
-  </strong>
- </p>
- <p>
-  2018年8月6日起，
-  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C" target="_blank">
-   中国央行
+  根据中国银保监会网站12月8日发布的新闻稿，
+  <span href="https://zh.wikipedia.org/zh-cn/%E9%83%AD%E6%A0%91%E6%B8%85" target="_blank">
+   郭树清
   </span>
-  将远期售汇业务的
-  <span href="https://zh.wikipedia.org/zh-cn/%E5%A4%96%E6%B1%87" target="_blank">
-   外汇
+  在新加坡金融科技节发表演讲，他形容中国金融科技应用整体上在法律规范和风险监管等方面，是“摸着石头过河”。
+ </p>
+ <p>
+  郭树清说，当前中国的一些网络金融机构透过过度营销贷款或类信用卡透支等
+  <span href="https://zh.wikipedia.org/zh-cn/%E9%87%91%E8%9E%8D" target="_blank">
+   金融
   </span>
-  风险准备金率从0调整为20%（与现在相反），当时背景是
-  <span href="https://zh.wikipedia.org/zh-cn/%E4%BA%BA%E6%B0%91%E5%B8%81" target="_blank">
-   人民币
+  产品，诱导过度消费。部分机构甚至给缺乏还款能力的学生过度放贷，出现违约后强制催收，引发一系列社会问题。“我们坚持对同类业务统一监管标准，坚决制止监管套利。”
+ </p>
+ <p>
+  并且，一些科技公司利用市场优势，过度采集、使用企业和个人数据，甚至盗卖数据。这些行为没有得到用户充分授权，严重侵犯企业利益和个人隐私。
+ </p>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/郭树清" target="_blank">
+   郭树清
   </span>
-  连续八周走贬，创1994年汇率并轨以来最长连跌记录。
+  并表示，中国也要关注新型“大而不能倒”风险，少数科技公司在小额支付市场占据主导地位，涉及广大公众利益，具备重要金融基础设施特征；一些大型科技公司涉足各类金融和科技领域，跨界混业经营。“必须关注这些机构风险的复杂性和外溢性，及时精准拆弹，消除新的系统性风险隐患。”
  </p>
  <p>
-  中国央行2018年上调远期售汇业务的
-  <span href="https://www.secretchina.com/news/gb/tag/外汇" target="_blank">
-   外汇
+  他强调，面对
+  <span href="https://www.secretchina.com/news/gb/tag/金融" target="_blank">
+   金融
   </span>
-  风险准备金率，目的为了增加远期售汇的摩擦力，进而稳定汇率。
+  科技持续快速发展，监管部门正研究制定相应的规制。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  2018年8月，在政策公布后，离岸
-  <span href="https://www.secretchina.com/news/gb/tag/人民币" target="_blank">
-   人民币
+  据《彭博》11月30日报道，由中国国务院副总理、金融委主任刘鹤牵头，央行等多个金融监管部门参与，成立了一个联合工作组专门监管蚂蚁集团。据悉，该工作组会定期与
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%9A%82%E8%9A%81%E9%9B%86%E5%9B%A2" target="_blank">
+   蚂蚁集团
   </span>
-  汇率迅速反弹，此后汇率重新走贬，但贬值趋势明显变缓。
- </p>
- <p>
-  但远期售汇业务外汇风险准备金率上调，也增加了外贸企业汇率套保成本（不套保又将面临汇率剧烈波动冲击），挤压了外贸企业利润空间。
+  联系，收集数据和其它材料，研究其重组并为金融科技行业起草其它规则。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +115,11 @@
   </div>
  </center>
  <p>
-  此外中国央行上调售汇业务准备金率这个行为本身也对外释放了中国央行认为人民币汇率存在贬值压力的预期，诱导看贬预期蓄积，一定程度上对冲了政策影响。
+  11月17日，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  证监会副主席方星海在创新经济论坛上也表示，蚂蚁集团上市是不是有时间表，取决于政府如何重组监管框架，特别是对于科技概念股，而且也特别关注公司如何应对监管环境。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,9 +134,11 @@
   </div>
  </center>
  <p>
-  <strong>
-   02相反的动作与动机
-  </strong>
+  阿里巴巴集团创始人马云和腾讯公司创始人
+  <span href="https://zh.wikipedia.org/zh-cn/%E9%A9%AC%E5%8C%96%E8%85%BE" target="_blank">
+   马化腾
+  </span>
+  在中国富豪榜上名列第一和第二位，蚂蚁集团暂缓上市令各界震惊，舆论的目光也落到马化腾身上。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,7 +153,25 @@
   </div>
  </center>
  <p>
-  2020年10月10日，中国央行将外汇风险准备金率从20%重新下调为0，动作与2018年完全相反；而本轮下调背景是人民币连续4个月升值，也与2018年完全相反。
+  12月2日，腾讯创始人
+  <span href="https://www.secretchina.com/news/gb/tag/马化腾" target="_blank">
+   马化腾
+  </span>
+  的文章在网络热传。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,7 +186,7 @@
   </div>
  </center>
  <p>
-  显然，下调风险准备金率这种降低远期售汇摩擦力的行为，或助力人民币汇率下挫。
+  他为腾讯公司年度特刊《三观》撰写了前言。“三观”指的是世界观、价值观、人生观。该特刊以一年为单位，每年临近年底的时候发布，记录腾讯的成长和主要变化。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,7 +201,7 @@
   </div>
  </center>
  <p>
-  2018年中国央行意图驱动人民币升值（对冲贬值趋势），而当前政策的出台则是中国央行意图驱动人民币贬值（对冲升值趋势），目的都是将人民币汇率控制在区间内震荡。
+  马化腾写道，在互联网这个快速迭代的行业，企业的发展只有进行时，没有完成时。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,84 +216,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   03中国央行的动机
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中国央行动机或有以下几点：
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  1、中国央行多次强调维持人民币区间内震荡，以过去一年的观测来看，中国央行属意的区间是6.8-7.2，现在显然已经突破了上限，已超6.7，这与中国央行意图不符。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2、突破下限固然会招致热钱外流，影响国际收支平衡。但突破上限却也将压制出口。企业创汇能力是汇率的基本面，汇率突破上限反过来会影响汇率基本面恶化，创汇能力下降也将影响国际收支平衡。由于海外受疫情打击产能尚未恢复，对中国出口企业的影响从宏观数据上尚未明显显现（美国贸易逆差攀升至14年最高，反过来也喻示中国出口受到打击较少），但对很多生存力较差的中小型出口企业影响却已经显现，汇率连续升值已将这些中小企业最后的利润空间剥夺。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  3、近期热钱呈现流入趋势（但经常项持续逆差），国际收支较为平稳，使得中国央行有能力腾出手来兼顾一下汇率基本面（企业创汇能力）。从这个角度理解，中国央行有动机将汇率重新稳定在6.8-7.2区间，来稳定出口企业的汇率生存环境。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  4、净外需是拉动经济的三驾马车之一，汇率升值显然将抑制出口增加进口，减少净外需，进而会压制中国经济反弹无力。
+  马化腾写道，在这个黑天鹅满天飞的时代，“相信又一场大洗牌即将开始。就像移动互联网转型一样，上不了船的人将逐渐落伍”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -268,7 +235,7 @@
   </ins>
  </center>
  <p>
-  5、调降准备金这个行为本身就可以降低企业资金流动的摩擦力，促进出口。
+  工商数据显示，11月9日，财付通支付科技有限公司发生变更，马化腾卸任法定代表人职务，由腾讯副总裁林海峰接任。腾讯方面对此回应称，此次是基于公司管理结构优化需要做出的正常调整，于此前向主管部门提交变更申请，并获央行批准。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -283,7 +250,7 @@
   </div>
  </center>
  <p>
-  6、宣示中国央行对汇率的信心。进而影响资金流入中国的信心，以信心刺激资金流入，可以一定程度上对冲资金外流摩擦力下降。
+  公开资料显示，财付通为腾讯控股的第三方支付机构，是微信支付与QQ钱包等的运营主体。2011年，财付通从中国央行手中拿下首批第三方支付牌照，早前还承担着腾讯理财通的部分职能。财付通支付科技有限公司成立于2006年8月25日，注册资本10亿元人民币，马化腾此前一直担任法定代表人。经营范围包含：电子商务、电子支付、支付结算和清算系统的技术开发；计算机技术服务等。股权穿透显示，大股东为深圳市腾讯计算机系统有限公司，持股95%，实际控制人为马化腾，受益股份达54.29%。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -298,7 +265,7 @@
   </div>
  </center>
  <p>
-  总体来说，以汇率升值吸引热钱流入（金融项顺差）是一种较为极端的、不可持续的稳定国际收支的手段；
+  目前马云控制的支付宝与马化腾控制的财付通，在中国支付市场处于垄断地位。支付宝、财付通分别占据了55.4%和38.8%的市场份额。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -313,7 +280,7 @@
   </div>
  </center>
  <p>
-  而以汇率贬值提高净出口（经常项顺差）则是一种更具可持续性，更显平和的稳定国际收支的手段。
+  此前蚂蚁集团要上市的消息带动了财付通概念的火热，从某种意义上来说，作为中国移动支付的两大巨头之一，财付通也具备了单独运作的能力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -328,37 +295,7 @@
   </div>
  </center>
  <p>
-  在汇率连续贬值的背景之下，中国央行或无法顾及太多，只求先稳住国际收支就行，哪怕手段不可持续；但在汇率连续升值的背景之下，中国央行显然会更倾向于提高国际收支的可持续性，截然相反的政策就此出台。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  然而，当前中国国际收支平衡构建于热钱顺差之上，具有脆弱性。又逢美元货币宽松与恐慌情绪反复循环激荡，刺激海外美元流动性大幅震荡，各新兴经济体频繁受到美元流动性的冲击。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  在此背景下，中国央行意图控制汇率重回合理均衡区间，或会波及到热钱流动趋势，脆弱的国际收支平衡会否或就此受到影响。
+  马云的金融布局有目共睹，马化腾也不甘落后。腾讯的微信支付、财付通等，已经形成了对中国人日常生活的全面覆盖。根据腾讯的财报数据，微信及Wechat的合并月活跃账户数达12.06亿人，同比增长6.5%，环比增长0.3%，较2020年一季度的12.025亿，仍有约350万的增长。在社交的场景之下，微信的控制力甚至还有超过蚂蚁集团的趋势。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -390,7 +327,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -422,13 +359,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949055.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949055.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949055.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/13/949055.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955121.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955121.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955121.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/955121.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949055.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/955121.md' width='0px' height='0px'/>
