--- a/pages/nsc413/n12601102.md
+++ b/pages/nsc413/n12601102.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【大选更新12.7】川普：他在隐藏什么？" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/000_8W66NP-600x400.jpg"/>
 <div class="caption">
- 川普（特朗普）总统周一（12月7日）质疑共和党乔治亚州州长布莱恩·肯普（Brian Kemp）未对选举投票实施签名验证。川普资料图。(Photo by ANDREW CABALLERO-REYNOLDS / AFP)
+ 川普（特朗普）总统2020年12月7日质疑共和党乔治亚州州长布莱恩·肯普（Brian Kemp）未对选举投票实施签名验证。川普资料图。(ANDREW CABALLERO-REYNOLDS/AFP)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
