--- a/pages/p5/955113.md
+++ b/pages/p5/955113.md
@@ -1,4 +1,4 @@
-### 中国大幅强化全球穷国第一大债主地位(图)
+### 中国大型公司苏宁集团遭传资金链断裂
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,79 +6,80 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img src="https://img3.secretchina.com/pic/2020/8-29/p2764671a487019635-ss.jpg"/>
-  <br>
-   世界银行批评中国没有积极投入暂停穷国偿还债务进程。（图片来源：Adobe stock）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p>
+  【看中国2020年12月8日讯】年关将至，有关中国大型公司经营不利的传闻特别多。今天有传闻指
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/苏宁集团" target="_blank">
+    苏宁集团
    </span>
-  </br>
+   资金
+  </strong>
+  链断裂，苏宁方面声明这是不实传言，已向警方报案。
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
+   </span>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月13日讯】（法广RFI）
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/世界银行" target="_blank">
-    世界银行
-   </span>
-  </strong>
-  周一指出，中国最近几年远超日本，大幅强化了全球穷国第一大
-  <strong>
-   债权国
-  </strong>
-  的地位，但世界银行批评中国没有积极投入暂停穷国偿还
-  <strong>
-   债务
-  </strong>
-  进程。
+  综合澎湃新闻等媒体报导，近期网上出现苏宁因面临大额债券偿付而出现
+  <span href="https://www.secretchina.com/news/gb/tag/资金" target="_blank">
+   资金
+  </span>
+  链断裂的传言。传闻还称，苏宁在渤海银行的贷款已经违约，民生和建设银行已抽贷。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  世界银行指出，中国在22国集团拥有的债权总额所占比重已从2013年的45%达致2019年年底的63%。在同一阶段，全球第二大
-  <span href="https://www.secretchina.com/news/gb/tag/债权国" target="_blank">
-   债权国
-  </span>
-  日本拥有的比率不变，继续维持在15%。
+  苏宁官方微博8日发布称：“这些传闻均不属实”。并指该传言已对公司的正常经营和品牌声誉造成了恶劣影响，公司已向有关部门报案，查实讯息来源，并追究造谣者及传谣者的法律责任。
  </p>
  <p>
-  今年春天，二十国集团决定暂停穷国偿还债务服务，以减轻遭
-  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
-   中共病毒
+  报导指出，近一个月来，苏宁
+  <span href="https://www.secretchina.com/news/gb/tag/债券" target="_blank">
+   债券
   </span>
-  (又称新冠状病毒，COVID-19)侵袭后经济陷于困难的穷困国家，这一暂停偿还债务5月1日正式启动，为期一年。
+  因价格震荡和债券购回计划，引发了多方关注。苏宁计划以累计人民币30亿元自有资金购回公司债券。
  </p>
  <p>
-  但是，国际货币基金组织，世界银行以及七国集团要求延长这一阶段。世界银行对私人债主以及对一些国家只部分投入这一进程感到遗憾。世界银行强调，一些最大的债权国，比如中国，一直没有真正投入到暂停穷国偿还
-  <span href="https://www.secretchina.com/news/gb/tag/债务" target="_blank">
-   债务
+  在今天有关苏宁资金链断裂的传闻出现之前，11月27日
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  的进程中来。
+  多家媒体曾引用彭博社报导指出，为了缓解融资压力，苏宁易购正在考虑出售旗下的电子商务业务，寻求估值约60亿美元，谈判正在进行当中。当时，苏宁也是迅速回应此消息“不属实”。
  </p>
  <p>
-  九月底，七国集团财长同意继续延长暂停偿还穷国债务，但七国集团同时鼓励所有债权国都应公正地参与这一进程。根据世界银行，一些国家不同意再延长一年，但最后或有可能达成一个延长半年的妥协。
+  财经媒体36氪报导，有分析认为，苏宁被曝计划出售电商业务，与近年来财务状况恶化有关。根据财报，第三季苏宁易购营收人民币624.38亿元，年减4.58%，归属于上市公司股东的净利润7.14亿元，年减92.69%，扣除非经常性损益后的净利润实际为负值，即亏损。
  </p>
  <p>
-  七国集团“非常”遗憾一些国家采取措施以避免加入暂停穷国还债进程，有意把属于国家的公共机构的对外
-  <span href="https://www.secretchina.com/news/gb/tag/贷款" target="_blank">
-   贷款
-  </span>
-  划入“商业贷款”。七国集团在这里不点名指的是中国。中国发展银行被北京当局定性“商业银行”，以避免纳入暂停偿还债务框架。
+  苏宁易购集团有限公司以电器零售起家，后发展成综合消费品项的零售业巨头，拥有线上及线下的销售管道。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  原文标题：苏宁遭传资金链断裂 回应指谣言已报案
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,7 +111,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -142,13 +143,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949070.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949070.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949070.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/13/949070.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955113.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955113.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955113.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/955113.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949070.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/955113.md' width='0px' height='0px'/>
