--- a/pages/p6/932501.md
+++ b/pages/p6/932501.md
@@ -1,4 +1,4 @@
-### 人民币兑美元汇价创十八个月新高央行叫停(图)
+### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img src="https://img2.secretchina.com/pic/2019/10-19/p2543641a517254714-ss.jpg"/>
+  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
   <br>
-   近期人民币兑美元升势持续。（图片来源：Hale/Adobe stock）
+   英俊战士战斗机。（图片来源：公有领域）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,81 +21,63 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月13日讯】中国经济下行，当局启动
+  1940年10月开始，
   <strong>
-   内循环
-  </strong>
-  改善环境。不过，
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/人民币" target="_blank">
-    人民币
+   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
+    纳粹
    </span>
+   德军
   </strong>
   对
   <strong>
-   美元
+   英国
   </strong>
-  汇率大幅度反弹，这样下去会影响中国
+  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
   <strong>
-   出口
+   飞行员
   </strong>
-  货品竞争力。上周六，中国人民银行采取措施，遏止人民币继续升值。但有经济学者指，长远而言人民币大幅下跌机会比较高。
+  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  近期，人民币升势持续，兑
-  <span href="https://www.secretchina.com/news/gb/tag/美元" target="_blank">
-   美元
-  </span>
-  由五月底的今年高位7.17，至今累计已升约6%。人民银行本周一起，将远期售汇的外汇风险准备金率，由20%下调至零，即金融机构为客户通过远期合约，沽人民币、换外币时，毋须再缴纳准备金，降低沽售人民币成本，意味中国政府不希望看到人民币继续升值。
- </p>
- <p>
-  周一(12日)，官方调高人民币中间价670点子，至6.7126兑一美元，是逾一年半高位。调升幅度是2005年7月人民币汇率形成机制改革以来最大，不过仍低于市场预期，市场忧虑人行想限制人民币升值速度，离岸价曾跌逾500点子，在岸价亦低开逾300点子。有分析预计，人民币跌至6.78水平或有支持。
- </p>
- <p>
   <strong>
-   人民币持持续升值对
-   <span href="https://www.secretchina.com/news/gb/tag/出口" target="_blank">
-    出口
-   </span>
-   造成打击
+   胡萝卜“造就”空中英雄？
   </strong>
  </p>
  <p>
-  中国人民银行深圳支行分析员刘女士当天接受自由亚洲电台采访时表示，近期人民币大幅升值，与国际资本大量买入人民币，卖出美元有关：“国际货币市场有一些背后的力量在大量购买人民币，同时卖出美元所造成的这种现象。因为人民币升值并不是有利的，反而会导致出口下降。”
- </p>
- <p>
-  刘女士认为，官方如今下调外汇风险准备金率，相信未来人民币上涨的速度将受到明显的抑制。但受制于美元贬值，未来一段时间人民币汇率应该还有小幅上涨空间。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  毕业于山东大学的金融学者司令对人民币升值并不意外，他对本台说：“人民币在过去很长一段时间内都是贬值，所以近期的升值是正常的价值回归。这一次人民币升值开始的始点和中美
-  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
-   贸易战
+  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
+  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
+   空军
   </span>
-  开始的始点大致相吻合，这说明中美贸易战对于人民币的升值起到一定的推波助澜作用。”
+  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
+ </p>
+ <p>
+  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
+  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
+   飞行员
+  </span>
+  视力大增，很可能与他们的食物有关。
+ </p>
+ <p>
+  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
+ </p>
+ <p>
+  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
+  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
+   德军
+  </span>
+  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,7 +92,11 @@
   </div>
  </center>
  <p>
-  中国人民银行三年前亦曾调整外汇风险准备金率，在2017年首八个多月，离岸人民币累升逾6%，高见6.49水平，人行于同年9月中，将外汇风险准备金率降至零，人民币随即回软，在其后三周共回落逾2%，至6.67水平。
+  档案显示，早在1937年，英国就研制出世界上第一部
+  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
+   机载雷达
+  </span>
+  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +112,7 @@
  </center>
  <p>
   <strong>
-   新冷战下人民币价值只会不断下跌
+   德军恐惧的“寂静死神”
   </strong>
  </p>
  <center>
@@ -142,7 +128,37 @@
   </div>
  </center>
  <p>
-  有分析认为，虽然美中贸易战已开打了两年，但中国对美国每年贸易顺差仍然维持在大约3000亿美元，这一轮人民币升值可以缓解特朗普政府对中国的不满。
+  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -161,11 +177,9 @@
   </ins>
  </center>
  <p>
-  学者司令相信，此次人民币汇率上涨周期，不会持续太久：“就前景来看，这一波人民币币值上涨，可能不会持续太久。因为中国正在大力倡导以国内的
-  <span href="https://www.secretchina.com/news/gb/tag/内循环" target="_blank">
-   内循环
-  </span>
-  为主，国际国内双循环共同促进。导致中国和外国之间良性互动逐渐减少。中美之间陷入全面战略对抗，有外界人士称为是新冷战，这些都导致中国的主要贸易伙伴和中国之间贸易交换在进一步缩小。”
+  <strong>
+   成功的关键是团队合作
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,7 +194,7 @@
   </div>
  </center>
  <p>
-  中国央行行长易纲近期在《中国金融》上发表文章，称尽可能长时间实施正常货币政策，促进居民储蓄和收入合理增长；要根据经济金融形势变化，科学把握货币政策力度。
+  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -195,7 +209,22 @@
   </div>
  </center>
  <p>
-  版权所有©2006,RFA。经Radio Free Asia,2025 MSt.NW,Suite 300,Washington DC 20036许可进行再版。http://www.rfa.org。
+  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -227,7 +256,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -259,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949068.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949068.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949068.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/13/949068.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949068.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
