--- a/pages/nf4514/n12603635.md
+++ b/pages/nf4514/n12603635.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.8】中共收买拜登 川普转实锤证据" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/5-600x400.jpg"/>
+<div><img alt="【大选更新12.8】德州起诉四摇摆州" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1212813314-600x400.jpg"/>
 <div class="caption">
- 中国人民大学国际关系学院副院长翟东升近日在演讲中自爆，中共过去几十年如何利用华尔街搞定美国。（视频截图合成）
+ 周一，德克萨斯州直接向美国最高法院提起诉讼，对乔治亚州、密歇根州、宾夕法尼亚州和威斯康星州的选举程序提出异议。图为美国最高法院外观。（Photo by SAUL LOEB / AFP）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
