--- a/pages/soh6/451579.md
+++ b/pages/soh6/451579.md
@@ -1,4 +1,4 @@
-### 【选情更新12/8】德州诉4摇摆州案发起迄今最大法律挑战
+### 【选情更新12/8】川普团队：选举争议关键日期是1月6日
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -19,7 +19,10 @@
   <span class="meta">
    【希望之声2020年12月8日】（本台记者凌杉综合报导）
   </span>
-  当地时间12月8日（周二），美国
+  当地时间12月8日（周二），川普团队发布声明表示，12月8日的“安全港期限”是正常情况下各州认证选举结果的最后一天。但是，选举争议要持续到12月8日之后并不是前所未有的。声明指出，对选举争议有重要意义的下一个日期是1月6日。
+ </p>
+ <p>
+  同日，美国
   <ok href="/term/1636">
    德州
   </ok>
