--- a/pages/p3/955153.md
+++ b/pages/p3/955153.md
@@ -1,4 +1,4 @@
-### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
+### 董卿美国豪宅1栋楼不下10个卫生间 堪比皇宫(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img2.secretchina.com/pic/2019/9-8/p2512761a275005499-ss.jpg"/>
   <br>
-   英俊战士战斗机。（图片来源：公有领域）
+   去年9月，董卿在《开学第一课》节目中大谈“爱国”。（图片来源：截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,55 +29,96 @@
   </div>
  </div>
  <p>
-  1940年10月开始，
+  【看中国2020年12月9日讯】今年5月，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
-    纳粹
+   <span href="https://www.secretchina.com/news/gb/tag/董卿" target="_blank">
+    董卿
    </span>
-   德军
   </strong>
-  对
+  被曝位于洛杉矶比弗利山的
   <strong>
-   英国
+   豪宅
   </strong>
-  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
-  <strong>
-   飞行员
-  </strong>
-  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
+  ，正在以899万美元（约6347万元人民币）挂牌出售。日前，又有媒体刊登了董卿在美国的豪宅照片，该豪宅一栋楼不下十个卫生间，内景比宫殿还豪华。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   胡萝卜“造就”空中英雄？
-  </strong>
- </p>
- <p>
-  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
-  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
-   空军
+  据《理财电报》报导，董卿在美国的家位于洛杉矶的比弗利山，该位置属于美国
+  <span href="https://www.secretchina.com/news/gb/tag/豪宅" target="_blank">
+   豪宅
   </span>
-  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
+  地，整个房屋足足有八百平方米，并且还带有室外游泳池，非常豪华。
  </p>
  <p>
-  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
-  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
-   飞行员
+  报导说，董卿家是两层楼的设计，房间数量非常多，大堂的设计特别漂亮，内景比宫殿还豪华。作者还特别介绍了董卿家的卫生间，称其面积相当大，即使采用了干湿分离的设计之后，还是尤为的宽敞，而且她家的卫生间都配置了非常高级的浴缸，一栋楼起码不下十个卫生间，这样的配置才是豪宅的标准。
+ </p>
+ <p>
+  因为这套豪宅已经挂售，所以相关的信息都被曝光，该房屋在董卿和丈夫密春雷的名下，从2017年开始放到市场上出售，一度标价为925万美元，之后标价又改为899万美元。
+ </p>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/12-9/p2834471a433096609-ss.jpg"/>
+  <br>
+   （网络截图）
+  </br>
+ </p>
+ <p>
+  随着美国豪宅照片的曝光，曾高调宣传“
+  <span href="https://www.secretchina.com/news/gb/tag/爱国" target="_blank">
+   爱国
   </span>
-  视力大增，很可能与他们的食物有关。
+  ”的董卿再度引发网民关注。去年9月，董卿曾与撒贝宁共同主持了综艺节目《开学第一课》。在节目中，董卿大谈什么“爱国”，“要像爱护生命一样爱护五星红旗”等等。不料，董卿6年前曾到美国生子等旧账被网民翻出。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
+  早在2014年4月，央视主持人董卿以“赴美学习深造”为由，实则到美国秘密生子。两年后，央视知情人向陆媒证实，董卿确实是到美国生子，董卿抱的那个男孩确实是她自己的。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
-  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
-   德军
+  金牌娱乐报导称，当初有记者问董卿，赴美求学是否如外界传闻一样为了生子，她还非常避讳地表示“私人事情不作回应”。尽管现在董卿的孩子已经在上海上学，但其拥有美国国籍是不争的事实。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  报导说，董卿的《开学第一课》节目播出后，网民和观众们质疑，一个为让孩子拥有美国国籍、想办法把孩子生在美国的人，回
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
+  后却对别人家的孩子大谈爱国和民族骄傲，这是多么的滑稽和可笑的一件事情？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -92,73 +133,7 @@
   </div>
  </center>
  <p>
-  档案显示，早在1937年，英国就研制出世界上第一部
-  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
-   机载雷达
-  </span>
-  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   德军恐惧的“寂静死神”
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
+  网友热议：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,9 +152,7 @@
   </ins>
  </center>
  <p>
-  <strong>
-   成功的关键是团队合作
-  </strong>
+  “这个人这么爱国，但在美国摆皇宫？是到美国去做间谍吧？应没收财产驱逐出境！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -194,7 +167,7 @@
   </div>
  </center>
  <p>
-  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
+  “这主持人就和中共的高官们一样，在国内忽悠普通百姓爱国爱党，私底下钱和家属早都输出了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,22 +182,7 @@
   </div>
  </center>
  <p>
-  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
+  “爱国主义是流氓的最后庇护所，爱国主义是猪奴的最后遮羞布。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -288,13 +246,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955153.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955153.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955153.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/09/955153.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/955153.md' width='0px' height='0px'/>
