同步于: 12月9日7时3分

--- a/pages/soh6/451579.md
+++ b/pages/soh6/451579.md
@@ -1,4 +1,4 @@
-### 【选情更新12/8】美联邦高院驳回川普宾州案
+### 【选情更新12/8】美联邦高院驳回宾州舞弊案
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -26,15 +26,15 @@
   <ok href="/term/1636">
    德州
   </ok>
-  向最高法院提交诉状，起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的选举过程违反宪法，指控州选举委员会改变选举法，不公平对待选民，并放宽选票检查，引发诸多投票违规行为。美国前州务卿表示，
+  向最高法院提交诉状，起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的选举过程违反宪法。周二下午，路易斯安那州宣布加入
   <ok href="/term/1636">
    德州
   </ok>
-  诉4
+  诉四
   <ok href="/term/14588">
    摇摆州
   </ok>
-  案已经发起自11月3日选举日以来最大的法律挑战。
+  的高院诉讼案原告方。
  </p>
  <p>
   川普高级法律顾问埃利斯（Jenna Ellis）在推文中引用
@@ -55,13 +55,42 @@
   以下是希望之声为您整合的12月8日即时更新新闻：
  </p>
  <h2>
+  路易斯安那州加入
+  <ok href="/term/1636">
+   德州
+  </ok>
+  诉四
+  <ok href="/term/14588">
+   摇摆州
+  </ok>
+  案
+ </h2>
+ <p>
+  周二下午，路易斯安那州宣布加入
+  <ok href="/term/1636">
+   德州
+  </ok>
+  诉四
+  <ok href="/term/14588">
+   摇摆州
+  </ok>
+  的高院诉讼案原告方。
+ </p>
+ <p>
+  路易斯安那州总检察长杰夫·兰德里发表声明说：数以百万的路易斯安那州居民关注本次大选出现的争议，他呼吁美国最高法院应考虑德克萨斯州最近的动议，以叫停4个
+  <ok href="/term/14588">
+   摇摆州
+  </ok>
+  有争议的选举结果。
+ </p>
+ <h2>
   美联邦高院驳回川普阵营诉宾州案
  </h2>
  <p>
   周二，美国最高法院拒绝了共和党人众议员迈克·凯利（Mike Kelly）提出的诉讼案，该案要求阻止宾夕法尼亚州证明总统选举结果。
  </p>
  <p>
-  根据高院的相关声明，由大法官阿利托引荐至高院的相关案例已经被驳回。
+  根据高院的相关声明，提交给阿利托大法官并由他引荐给最高法院的上诉申请被拒绝。
  </p>
  <p>
   当局并没有提供驳回的原因。
