同步于: 12月9日8时2分

--- a/pages/soh6/451579.md
+++ b/pages/soh6/451579.md
@@ -1,4 +1,4 @@
-### 【选情更新12/8】美国10个州起诉4摇摆州选举违宪
+### 【选情更新12/8】德州、路易斯安那起诉4摇摆州选举违宪
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -26,7 +26,7 @@
   <ok href="/term/1636">
    德州
   </ok>
-  向最高法院提交诉状，起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的选举过程违反宪法。周二下午，路易斯安那州、佛罗里达等9个州宣布加入
+  向最高法院提交诉状，起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的选举过程违反宪法。周二下午，路易斯安那州宣布加入
   <ok href="/term/1636">
    德州
   </ok>
@@ -55,7 +55,7 @@
   以下是希望之声为您整合的12月8日即时更新新闻：
  </p>
  <h2>
-  路易斯安那州等9个州加入
+  路易斯安那州加入
   <ok href="/term/1636">
    德州
   </ok>
@@ -66,7 +66,7 @@
   案
  </h2>
  <p>
-  周二下午，路易斯安那州与密苏里、阿拉巴马州、阿肯色州、佛罗里达州、肯塔基州、密西西比州、南卡罗来纳州和南达科他州宣布加入
+  周二下午，路易斯安那州宣布加入
   <ok href="/term/1636">
    德州
   </ok>
@@ -83,18 +83,17 @@
   </ok>
   有争议的选举结果。
  </p>
+ <p>
+  对于相关诉讼，阿拉巴马州总检察长发布声明，宣布该州支持
+  <ok href="/term/1636">
+   德州
+  </ok>
+  的诉讼。
+ </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
    <div class="iframely-embed" style="max-width: 550px;">
-    <div class="iframely-responsive" style="padding-bottom: 100%;">
-    </div>
-   </div>
-  </div>
- </div>
- <div class="soh-embed">
-  <div class="soh-embed-inner">
-   <div class="iframely-embed" style="max-width: 550px;">
-    <div class="iframely-responsive" style="padding-bottom: 100%;">
+    <div class="iframely-responsive" style="padding-bottom: 89.0948%;">
     </div>
    </div>
   </div>
