同步于: 12月9日16时2分

--- a/pages/p1/955209.md
+++ b/pages/p1/955209.md
@@ -1,4 +1,4 @@
-### 东北产粮区突降大雪 水稻遭殃 农民哀叹(图)
+### 中共国企大规模没收护照 外媒曝内幕(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="黑龙江突降大雪，水稻全压趴（图片来源：视频截图）" src="https://img3.secretchina.com/pic/2020/10-15/p2797051a600750560-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="河北国企收缴员工护照内部文件（图片来源：大纪元）" src="https://img3.secretchina.com/pic/2020/12-9/p2834791a292006768-ss.jpg" style="height:339px; width:600px"/>
   <br>
-   黑龙江突降大雪，水稻全压趴（图片来源：视频截图）
+   河北国企收缴员工护照内部文件（图片来源：大纪元）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,155 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月15日讯】10月14日，
+  【看中国2020年12月9日讯】自
   <strong>
-   东北产粮区
-  </strong>
-  的
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/黑龙江" target="_blank">
-    黑龙江
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
   </strong>
-  省多地突遇
+  疫情爆发以来，屡屡传出中国民众
   <strong>
-   大雪
+   出境
   </strong>
-  ，田地里已经成熟尚未收割的
+  被禁的消息。近日，海外媒体大纪元获得多份文件显示，疫情期间严控国民出境，大量国企员工的因私
   <strong>
-   水稻
+   护照
   </strong>
-  全部
-  <strong>
-   压趴
-  </strong>
-  。突如其来的大雪让农民们不知所措，只能无奈哀叹。
+  被没收。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据大陆媒体报导，10月13日至14日，
-  <span href="https://zh.wikipedia.org/wiki/%E9%BB%91%E9%BE%99%E6%B1%9F%E7%9C%81" target="_blank">
-   黑龙江
+  据大纪元报导指，近期大纪元时报获得邢台市政府外事办2020年4月2日《关于疫情防控期间对公职人员出国（境）护照实行集中管理的紧急通知》。通知要求该市各国有企业、驻市各单位对所有持有护照人员进行全面摸排，收缴
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;q=%E6%8A%A4%E7%85%A7" target="_blank">
+   护照
   </span>
-  省佳木斯、同江、哈尔滨、大庆、绥满、肇州等多地突降大雪，气温骤然降至零度以下。
+  进行统一管理，并要求在4月3日15:00前上报情况。
  </p>
  <p>
-  网友发布的视频中可见，一夜
-  <span href="https://www.secretchina.com/news/gb/tag/大雪" target="_blank">
-   大雪
+  此外，该报同时还获得邢台多家
+  <span href="https://www.secretchina.com/news/gb/tag/国企" target="_blank">
+   国企
   </span>
-  后，已经成熟的水稻全部被压趴在田地里。一大片的水稻没有一根是站着的，而水稻上面覆盖的全是雪。视频中的农民哀叹：“完了，全趴下了”，“就因为昨天的一场大雪”。
+  4月3日上报的相关落实情况。
  </p>
  <p>
+  如冀中能源集团党委组织部的报告透露，该公司要求各单位一律暂缓安排因公出国（境）任务，职工因私出国（境）一律暂缓。
  </p>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="zh">
-   大豐收的謊言又被老天爺拆穿了！剛剛給外邦撒幣9.5億，自家的農民全爬下了。
-   <span href="https://t.co/sVb0phbAqE">
-    pic.twitter.com/sVb0phbAqE
-   </span>
-  </p>
-  — 林才竣Michael新號 (@Michael90656953)
-  <span href="https://twitter.com/Michael90656953/status/1316359896888082433?ref_src=twsrc%5Etfw">
-   October 14, 2020
-  </span>
- </blockquote>
  <p>
-  另一视频中一位女士无奈说道：“居然下雪了，毫无征兆的下雪了。我特别特别慌，我地才收了一部分，居然下雪了。吓死我了，我要疯了。”
+  该报告还透露出中共的政策是“应备尽备、应收尽收、应查尽查”、在疫情期间冻结全部因私出国（境）事项审批。而对于全部具有管理人员身份的在职人员则需在公安机关登记备案并收缴因私出国（境）证照。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="zh">
-   东北好几个地方开始下雪了。如果饥荒 饿死的也是韭菜。 三年饥荒 中南坑连文公团都活的好好的 舞照跳。而乡下 死尸遍野。 我唯一不明白是 大家怎么就忍下来了。如果那时候反抗 恐怕现在也没这么惨冰冻三尺是一代比一代沉默一代比一代堕落一代比一代愚蠢造成的 当然 中共却是一代比一代坏 一代比一代狠
-   <span href="https://t.co/iHw9drkOpk">
-    pic.twitter.com/iHw9drkOpk
-   </span>
-  </p>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  — 青山兰 (@qingshanlan)
-  <span href="https://twitter.com/qingshanlan/status/1316375973315702786?ref_src=twsrc%5Etfw">
-   October 14, 2020
-  </span>
- </blockquote>
  <p>
-  水稻在收割前被大雪压趴。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="zh">
-   14日，大清國黑龍江農場稻穀收割前被大雪壓垮，幾乎絕收。
-   <br>
-    <br>
-     磚家呢？今年還豐收嗎？
-     <span href="https://t.co/1Hrwxzew5P">
-      pic.twitter.com/1Hrwxzew5P
-     </span>
-    </br>
-   </br>
-  </p>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  — catcarterpi (@catcarterpi)
-  <span href="https://twitter.com/catcarterpi/status/1316567998547677185?ref_src=twsrc%5Etfw">
-   October 15, 2020
-  </span>
- </blockquote>
- <p>
-  网友感叹：“这还能有收成吗？”
+  报告指出，截至4月，冀中能源集团本部及所属驻邢子公司冀中股份公司、邢矿集团等单位持有出国（境）证照人员1,373人，共计1,552本，“应收尽收”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -184,7 +85,86 @@
   </div>
  </center>
  <p>
-  “砖家呢？”
+  冀中能源股份有限公司委员会组织部的《冀中能源股份有限公司出国（境）证照实行集中管理落实情况总结》称，该公司先后三次进行出国（境）情况和证照持有情况摸底排查，在原有科级及以上干部证照集中管理基础上，将一般管理人员和普通工人也纳入单位集中管控范围内。甚至对离退休职工、职工近亲属出入境证照都要摸排登记。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  另外，该公司还对因私
+  <span href="https://www.secretchina.com/news/gb/tag/护照" target="_blank">
+   护照
+  </span>
+  进行分级管理。矿处级干部因私出国（境）证件由公司组织部集中保管；科级干部、一般管理人员由各单位组织部集中保管；其他职工由所在单位组织人事部门收缴，集中管理；公司机关科级及以下人员，则由公司机关党委集中管理。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  文件称：“确保应收尽收，集中管理”，“确保不漏一人，不漏一证，一律收缴，由所在单位统一管理”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  河北兴泰发电有限责任公司及河北顺德投资集团有限公司的报告中也显示了对所有人员持有的护照“应收尽收”、“统一管理”的类似信息。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  更为夸张的是，河北省电力有限公司邢台供电公司等国企竟然还要求员工签订不出国的承诺书。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  此外，除了公职人员和国企员工外，早前也有信息显示，学校教师、医护人员的护照也受到中共的收缴管制。且有越来越多人护照被强制上缴，违者则受到惩处。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -203,11 +183,46 @@
   </ins>
  </center>
  <p>
-  “看到黑龙江佳木斯同江
-  <span href="https://www.secretchina.com/news/gb/tag/水稻" target="_blank">
-   水稻
+  <strong>
+   中共严控人员
+   <span href="https://www.secretchina.com/news/gb/tag/出境" target="_blank">
+    出境
+   </span>
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  今年11月12日，中共移民管理局发布声明指，将严格控制不必要人员跨境活动。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  声明中称，继续暂停外国人持部分有效签证、居留许可入境，继续暂停口岸签证和区域性免签政策；从严审批
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  没有收割，就遇到大雪，真的很难受，农业靠天吃饭。”
+  公民旅游等非必要事由的出入境证件申请，及劝阻和限制内地居民旅游、探亲、访友等非必要、非急需出入境活动。目前已经关停了46个陆地口岸、66条边民通道。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -222,37 +237,7 @@
   </div>
  </center>
  <p>
-  “粮食更短缺了。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “习祸比天灾大一万倍！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “看央视全是幸福的天堂，看网络全是悲惨世界。”
+  大陆民主公益人士董广平认为，中共以控制疫情为借口，严控人员跨境活动等一系列动作，实质上是反映出了中国外汇的严重紧缺。因申请出国旅游等需要兑外汇，现在防止外汇流出。他还表示：“因为现在世界各国因疫情对中共进行谴责并且追责，中共就要防止外界（国外）对其不利的信息传入。出于对外汇、舆论控制、疫情控制等很多的考虑，都是因中共的恐惧、它害怕。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -316,13 +301,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949326.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949326.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949326.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/15/949326.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955209.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955209.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955209.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/09/955209.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949326.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/955209.md' width='0px' height='0px'/>
